<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OperrWork</string>
    <string name="action_settings">Settings</string>
    <string name="action_qrCode">QR Code</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="error_internet_connection_common" tools:ignore="ExtraTranslation">Please check internet connection!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="choose_themes">choose themes</string>
    <string name="choose_options">Choose Options</string>
    <string name="request_for_photos">Request For Photos</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="demo_phone_number">+1 (123) 456–7890</string>
    <string name="demo_ssn">xxx-xx-xxxx</string>
    <string name="demo_dept_class">xxxx</string>
    <string name="demo_check_no">--</string>
    <string name="demo_full_time">Full Time</string>
    <string name="submit">Submit</string>
    <string name="sec">Secs</string>
    <string name="min">Mins</string>
    <string name="day">Days</string>
    <string name="hours">Hours</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_59">59</string>
    <string name="_01">01</string>
    <string name="dialog_util_common_no">NO</string>
    <string name="dialog_util_common_ok">OK</string>
    <string name="dialog_util_common_yes">YES</string>
    <string name="dialog_util_common_alert">Alert</string>
    <string name="dialog_util_common_warning">Warning</string>
    <string name="dialog_util_common_title_remind">Remind</string>
    <string name="dialog_util_common_remind_again">REMIND AGAIN</string>
    <string name="dialog_util_common_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="status_422">Invalid data</string>
    <string name="status_500">Internal server error</string>
    <string name="status_400">Invalid Email password </string>
    <string name="status_409">CONFLICT, User data existed</string>
    <string name="status_404">email or username does not exists</string>
    <string name="status_423">LOCKED, The User existed but status inactivated</string>
    <string name="status_201">CREATED User created successfully now you can login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="department">Department</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="account_email_address">Account Email Address</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="hr">$/HR</string>
    <string name="hrs">HRS</string>
    <string name="ytd">YTD</string>
    <string name="mcwh">MCWH</string>
    <string name="sswh">SSWH</string>
    <string name="fitw">FITW</string>
    <string name="type">Type</string>
    <string name="menu">Menu</string>
    <string name="total">Total</string>
    <string name="taxes">Taxes</string>
    <string name="notes">Notes</string>
    <string name="review">Review</string>
    <string name="net_pay">NetPay</string>
    <string name="holiday">Holiday</string>
    <string name="current">Current</string>
    <string name="payment">Payment</string>
    <string name="earning">Earning</string>
    <string name="earnings">Earnings</string>
    <string name="minus_er">Minus ER</string>
    <string name="add_note">Add Note</string>
    <string name="jone_doe">Jone Doe</string>
    <string name="optional">Optional</string>
    <string name="end_date">End Date</string>
    <string name="sub_total">SubTotal</string>
    <string name="vacation">Vacation</string>
    <string name="marketing">Marketing</string>
    <string name="end_notice">End Notice</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="start_date">Start Date</string>
    <string name="time_punch">Time Punch</string>
    <string name="add_a_note">Add a Note</string>
    <string name="my_history">My History</string>
    <string name="my_off_days">My Off Days</string>
    <string name="total_wages">Total Wages</string>
    <string name="my_scan_key">My Scan Key</string>
    <string name="jode_email">jode@operr.com</string>
    <string name="best_regards">Best Regards,</string>
    <string name="company_news">Company News</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="my_details">Profile Details</string>
    <string name="off_days_used">Off Days Used</string>
    <string name="vacation_days">Vacation Days</string>
    <string name="optional_brackets">(Optional)</string>
    <string name="forgotten">Forgotten Password</string>
    <string name="general_manager">General Manager</string>
    <string name="additional_note">Additional Note</string>
    <string name="use_Touch_Id">Use Touch Id Login</string>
    <string name="profile_details">Profile Details</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="specify_department">Specify Department</string>
    <string name="history_of_off_days">History of Off Days</string>
    <string name="create_employee_pin">Create Employee PIN</string>
    <string name="company_policy">Company Policy Agreement</string>
    <string name="marketing_supervisor">Marketing Supervisor</string>
    <string name="specify_date_time">Specify Date &amp; Time</string>
    <string name="Remaining_available_days">Remaining Available Days</string>
    <string name="clean_air_car_service_parking">Clean Air Car Service \n &amp; Parking Corporation</string>
    <string name="to_colon">To:</string>
    <string name="ot_colon">OT:</string>
    <string name="ssn_colon">SSN:</string>
    <string name="date_colon">Date:</string>
    <string name="name_colon">Name:</string>
    <string name="type_colon">Type:</string>
    <string name="from_colon">From:</string>
    <string name="note_colon">Note:</string>
    <string name="topic_colon">Topic:</string>
    <string name="email_colon">Email:</string>
    <string name="total_colon">Total:</string>
    <string name="status_colon">Status:</string>
    <string name="number_colon">Number:</string>
    <string name="address_colon">Address:</string>
    <string name="position_colon">Position:</string>
    <string name="dept_class_colon">Dept/Class:</string>
    <string name="department_colon">Department:</string>
    <string name="check_number_colon">Check No:</string>
    <string name="select_time_colon">Select Time:</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="employee_name_colon">Employee Name:</string>
    <string name="please_select_colon">Please Select:</string>
    <string name="full_part_time_colon">Full/Part Time:</string>
    <string name="last_punch_out_colon">Last punched Out:</string>
    <string name="forgot">Forgot Your Password ?</string>
    <string name="skip_this_step">Skip This Step</string>
    <string name="msg_you_ve_Successfully">You\'ve Successfully\n clocked in</string>
    <string name="msg_for_more_details">For more details go to time sheet.</string>
    <string name="msg_note_need">Note: need to go home early because of the bad weather.</string>
    <string name="msg_building_rules_regarding">Building Rules Regarding Smoking and marijuana.</string>
    <string name="msg_forgotten">Please enter your email address to begin the recovery process.</string>
    <string name="msg_i_had_met_client">I had met clients this morning before coming to the office.</string>
    <string name="msg_tap_on_the_qr">Tap on the QR code and hold your tab for a few seconds to save.</string>
    <string name="msg_lift_and_rest">Lift and rest the edge of your finger in the Home button repeatedly.</string>
    <string name="msg_there_will_be_a_mandatory">There will be a mandatory meeting at 4:00pm with marketing Team.</string>
    <string name="msg_please_sign_your_name">Please sign your name on the line. Tap and hold on the signature to edit or reset your signature.</string>
    <string name="msg_lorem_ipsum">Lorem ipsum dolor sit amet, pro eu vulputate sadipscing conclusionemque. An per numquam facilis, aperiri contentiones sit cu. Has illud labores ex, cu doctus scripta quaerendum qui. Ad vim modus aperiam omittantur, vis te eruditi legendos incorrupte, ut his justo copiosae euripidis. Et melius alienum persequeris est, sit nibh soleat cu.</string>
    <string name="msg_press_back_to_exit">Press back again to exit</string>
    <string name="msg_note_added_successful">Note Added Successful</string>
    <string name="msg_already_open">Screen Already Open</string>
    <string name="msg_log_out">Are you sure you want to Log Out ?</string>
    <string name="msg_trip_to_san">Trip to San Diego</string>
    <string name="btn_done">Done</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_login">Login</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_set_news">Set News</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_register">Register</string>
    <string name="btn_punch_in">Punch In</string>
    <string name="btn_add_note">Add Note</string>
    <string name="btn_create_content">Create Content</string>
    <string name="btn_days_available">Days Available</string>
    <string name="btn_turn_off_notifications">Turn Off Notifications</string>
    <string name="tb_updates">Updates</string>
    <string name="tb_pay_stubs">Pay Stubs</string>
    <string name="tb_app_login">App Login</string>
    <string name="tb_time_sheet">TimeSheet</string>
    <string name="tb_clock_in">Clock In</string>
    <string name="tb_hello_username">Hello</string>
    <string name="tb_account_help">Account Help</string>
    <string name="tb_edit_signature">Edit Signature</string>
    <string name="tb_reset_pass_code">Reset Passcode</string>
    <string name="tb_request_off_days">Request Off Days</string>
    <string name="tb_register_employee">Register Employee</string>
    <string name="tb_my_employee_profile">My Employee Profile</string>
    <string name="remember_me">Remember Me</string>
    <string name="i_agree_term">I agree to terms &amp; conditions</string>
    <string name="date_end">End Date</string>
    <string name="date_start">Start Date</string>
    <string name="date_mon">Mon 01/01/19</string>
    <string name="date_wed">Wed 03/12/19 9:25 AM</string>
    <string name="date_tue">Tues 03 / 11 / 19 </string>
    <string name="date_only">03/20/19</string>
    <string name="date_only_wed">Wed 03 / 12 / 2019</string>
    <string name="date_only_wed_note">Wed 03 / 12 / 2019 \n 9:25 AM</string>
    <string name="date_mon_april">Monday April 25,2019</string>
    <string name="date_january">Date: 01/01/19 – 01/07/19 </string>
    <string name="time_hrs">Hrs</string>
    <string name="time_min">Min</string>
    <string name="time_sec">Sec</string>
    <string name="time_wed">9:25 AM</string>
    <string name="time_10_30">10:30 AM</string>
    <string name="time_tue">5:30 PM</string>
    <string name="time_hours">Hours</string>
    <string name="time_end">End Time</string>
    <string name="u00b7">·</string>
</resources>