<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_pay_stubs_taxes_details_type"
        style="@style/TextStyleItemDetails"
        android:layout_weight="1"
        android:layout_width="@dimen/dp_0"
        android:text="@string/type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_pay_stubs_taxes_details_current"
        style="@style/TextStyleItemDetails"
        android:layout_weight="2"
        android:layout_width="@dimen/dp_0"
        android:text="@string/current" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_pay_stubs_taxes_details_ytd"
        style="@style/TextStyleItemDetails"
        android:layout_weight="2"
        android:layout_width="@dimen/dp_0"
        android:text="@string/ytd" />

</androidx.appcompat.widget.LinearLayoutCompat>