<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UpdatesExtendedFragment">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_Company_News"
                style="@style/TextStyleTitle"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_32"
                android:text="@string/company_news"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_2">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleTitleMyProfile"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/from_colon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_From_Updates_Extended_Fragment"
                    style="@style/TextStyleTitleMyProfile"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/jone_doe"
                    android:textColor="@android:color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_2">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleTitleMyProfile"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/to_colon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_To_updates_extended_Fragment"
                    style="@style/TextStyleTitleMyProfile"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/date_mon"
                    android:textColor="@android:color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_2">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleTitleMyProfile"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/date_colon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_date_update_extended_Fragment"
                    style="@style/TextStyleTitle"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/date_mon"
                    android:textColor="@android:color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_time_updates_extended_Fragment"
                    style="@style/TextStyleTitle"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/time_10_30"
                    android:textColor="@android:color/black" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/dotted_single_line_background" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleTitle"
                android:text="@string/topic_colon"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleSubTitlePunch"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/msg_building_rules_regarding"
                android:textColor="@android:color/black" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleSubTitlePunch"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="start"
                android:text="@string/msg_lorem_ipsum"
                android:textColor="@android:color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleTitle"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/best_regards"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_signature"
                style="@style/ImgSquareSmall"
                android:layout_marginTop="@dimen/dp_8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_Name"
                style="@style/TextStyleTitle"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/jone_doe"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleTitle"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/general_manager"
                android:textColor="@android:color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BtnStyleBlack"
            android:layout_width="160dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/btn_accept" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>