<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:clipToPadding="true"
    android:gravity="bottom"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        app:cardCornerRadius="@dimen/dp_16"
        app:cardPreventCornerOverlap="false"
        app:cardElevation="@dimen/dp_0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:layout_marginBottom="@dimen/dp_16"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/TextColorBottomSheet"
                android:gravity="center"
                android:paddingTop="@dimen/dp_24"
                android:paddingBottom="@dimen/dp_24"
                android:text="@string/time_punch"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/punch_date"
                style="@style/TextStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center"
                android:text="@string/date_only_wed" />

            <TextView
                android:id="@+id/punch_time"
                style="@style/TextStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_wed"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_28" />

            <TextView
                android:id="@+id/punch_last_punch_title"
                style="@style/TextStyleSubTitlePunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:gravity="center"
                android:text="@string/last_punch_out_colon"
                android:textColor="@color/DarkGrayDark" />

            <TextView
                android:id="@+id/punch_last_punch_date"
                style="@style/TextStyleSubTitlePunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_tue" />

            <TextView
                android:id="@+id/punch_last_punch_time"
                style="@style/TextStyleSubTitlePunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_tue" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:gravity="center"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_16"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_punch_in"
            style="@style/BtnStyleClockIn"
            android:background="@drawable/btn_style_clock_in_white"
            android:text="@string/btn_punch_in"
            android:padding="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_marginBottom="@dimen/dp_2"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/txt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_punch_cancel"
            style="@style/BtnStyleClockIn"
            android:padding="@dimen/dp_16"
            android:background="@drawable/btn_style_clock_in_white"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dp_2"
            app:layout_constraintBottom_toTopOf="@+id/txt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>


