<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_time_dispute_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_8"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u00b7"
            android:textSize="36sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_history_notes_dates"
            style="@style/TextStyleSubTitlePunch"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/time_wed"
            android:textColor="@android:color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_history_off_used"
        style="@style/TextStyleSubTitlePunch"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_18"
        android:gravity="start"
        android:text="@string/notes" />

</LinearLayout>